--- a/.github/ISSUE_TEMPLATE/ApplicantForm.yaml
+++ b/.github/ISSUE_TEMPLATE/ApplicantForm.yaml
@@ -1,6 +1,6 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
+name: DEI Applicant form for In-Person Event
+description: Fill the application form
+title: "[Application]: "
 labels: ["bug", "triage"]
 assignees:
   - octocat
@@ -8,55 +8,29 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out the DEI badging application.
   - type: input
-    id: contact
+    id: Eventname
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      label: Event Name
+      description: What's the event name
+      placeholder: ex. Chaoss conferrence
     validations:
       required: false
-  - type: textarea
-    id: what-happened
+  - type: input
+    id: WebsiteLink
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      label: Link to the website
+      description: Enter the link of the event website
     validations:
       required: true
   - type: dropdown
-    id: version
+    id: isEventOrganiser
     attributes:
-      label: Version
-      description: What version of our software are you running?
+      label: Are you an event organizer?
+      description: Select Yes/No
       options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
+        - Yes
+        - No
     validations:
       required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
