--- a/.github/ISSUE_TEMPLATE/ApplicantForm.yaml
+++ b/.github/ISSUE_TEMPLATE/ApplicantForm.yaml
@@ -16,14 +16,14 @@ body:
       description: What's the event name
       placeholder: ex. Chaoss conferrence
     validations:
-      required: "false"
+      required: false
   - type: input
     id: WebsiteLink
     attributes:
       label: Link to the website
       description: Enter the link of the event website
     validations:
-      required: "true"
+      required: true
   - type: dropdown
     id: isEventOrganiser
     attributes:
@@ -33,4 +33,4 @@ body:
         - "Yes"
         - "No"
     validations:
-      required: true"
+      required: true
